--- a/app/Rmd/intro_FR.Rmd
+++ b/app/Rmd/intro_FR.Rmd
@@ -34,36 +34,44 @@ load("../data/OpenData.RData")
 load("../data/OpenData_sardist.RData")
 load("../data/SecureData.RData")
 #load("\\\\ent.dfo-mpo.ca\\ATLShares\\Science\\BIODataSvc\\SRC\\Reproducible_Reporting\\data\\SecureData.Rdata")
-load("../data/MARFISSCI.SPECIES.RData")
-lapply(list.files("../R", pattern = ".[Rr]$", full.names = TRUE),source)
-# check helpers.R for a list of packages
+lapply(list.files("../R", pattern = ".[Rr]$", full.names = TRUE),source) # check helpers.R for a list of packages
 ```
 
 ```{r Search Area and setup.R, echo=FALSE, include=FALSE, cache=FALSE}
 studyArea <- sf::st_read("{{path_to_geoms}}")
 #studyArea <- sf::st_read("geoms_slc.geojson")
-
 # Uncomment the following to test fixed polygon:
 # studyArea <- st_read("../studyAreaTest/geoms_slc_test.geojson")#Offshore
 # studyArea <- st_read("../studyAreaTest/geoms_slc_coastal_test.geojson")#coastal 
 # studyArea <- st_read("../studyAreaTest/geoms_slc_no_land.geojson")#no land
-
+Region <- st_read("../studyAreaTest/geoms_slc_MarBioRegion.geojson")
 site <- sf::st_centroid(studyArea) 
 ```
 
 ```{r parameters for area_map.r, echo=FALSE, include=FALSE, cache=FALSE}
-land_layer<-land50k_sf
-
 # The following defines studyBox geometry "look". studyBox_geom is input into area map or can be added to any map later
 studyBox_geom <- geom_sf(data=studyArea, fill=NA, col="red", size=1) 
 
 # The following plots area map using function (output is a list)
-areaMapList<-area_map(studyArea,site,land_layer, 5, bounds_sf,studyBox_geom)
+areaMapList<-area_map(studyArea, site, land50k_sf, 5, bounds_sf, studyBox_geom)
 
 # The following separates items in the output list: first item is a map and second is a bounding box of the map
 areaMap=areaMapList[[1]] # map
 bboxMap=areaMapList[[2]] #bounding box of the map
 ```
+
+```{r parameters for region_map.r, echo=FALSE, include=FALSE, cache=FALSE}
+# Bounding box for the region
+regionBox <- sf::st_bbox(Region) 
+
+# Create the regional map
+regionMap <- region_map(regionBox, studyArea, land10m_sf, bounds_sf)  
+```
+
+<!-- # ```{r child = c('../Rmd/report_cetaceans_EN.Rmd', 'report_fish_EN.Rmd', 'report_habitat_EN.Rmd', 'report_planning_EN.Rmd', 'report_SARA_EN.Rmd')} -->
+<!-- # ``` -->
+ <!-- ```{r child = '../Rmd/report_SARA_EN.Rmd'} -->
+ <!-- ``` -->
 
 <!-- END  -->
 
@@ -81,11 +89,10 @@ Ce document résume les données régionales, y compris les renseignements sur l
 
 Le présent document est conçu comme un outil de rapport reproductible, appuyé par le langage de balisage R et généré par une interface d’application R-Shiny hébergée sur le réseau du MPO. Les résumés et les résultats des rapports sont basés sur des données extraites d’une zone de recherche fournie par l’utilisateur (un polygone d’intérêt focal) avec un tampon défini par l’utilisateur (figure x). Les instructions d’utilisation de l’interface R-Shiny sont fournies dans le manuel technique. En raison du caractère sensible potentiel de certaines données et informations, l’accès aux données de l’application doit être accordé, et le rapport est destiné à un usage interne uniquement.  
 
-```{r Fig 1 search polygon, fig.height=8, fig.width=11, fig.cap='Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Buffer area is used by this tool to query information and automatically generate a report. '}
+````{r, fig.height=8, fig.width=11, fig.cap='Map showing the search area defined by the user (outlined in red) to query information and automatically generate this report. '}
 areaMap
+# areaMap can be plotted once and then reused for other plots
 ```
-
-Les espèces qui ont été inscrites aux termes de la Loi sur les espèces en péril (LEP), évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC), ou qui figurent sur la liste des espèces sauvages, sont actuellement visées par ce cadre de rapport reproductible. Reconnaissant l’importance de tenir compte des approches écosystémiques de gestion, le présent rapport comprend également de l’information sur d’autres espèces (p. ex., commerciales, récréatives, importantes sur le plan écologique), les composantes écosystémiques (p. ex., l’habitat côtier) et les zones désignées pour l’aménagement du territoire (p. ex., zones d’importance écologique et biologique) pour chaque zone définie par l’utilisateur. 
 
 Le résultat de la recherche comprend les sections suivantes :  
 1) Renseignements provenant du Programme national sur les espèces aquatiques en péril
@@ -104,31 +111,27 @@ Le résultat de la recherche comprend les sections suivantes :
 
 Le présent rapport comprend des renseignements provenant de diverses sources ayant différents niveaux de contrôle de la qualité. Par conséquent, les sources de données dans le rapport sont classées en niveaux de qualité des données, auxquels sont associés les recommandations d’utilisation connexes.
 
-<br><br>
 ```{r table tiers read, echo=FALSE, cache=FALSE, include = FALSE}
 table_tier <- read.csv("../data/misc/table_tiers_EN.csv")
 ```
 ```{r}
-kable(table_tier,align="l", 
-      caption = "Quality Tiers defined to describe sources of information queried and summarized in this report.")
+knitr::kable(table_tier,align="l", 
+      caption = "Quality Tiers defined to describe sources of information queried and summarized in this report.", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 ```
 
-#```{r}
-kable(table_tier, align="l", 
-      caption = "Quality Tiers defined to describe sources of information queried and summarized in this report.") %>%  kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
-#```
-
 # **RÉSULTATS DE LA RECHERCHE :**  
+ 
+Les espèces qui ont été inscrites aux termes de la _Loi sur les espèces_ en péril (LEP), évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC), ou qui figurent sur la liste des _espèces sauvages_ (Espèces sauvages 2015), sont actuellement visées par ce cadre de rapport reproductible. Reconnaissant l’importance de tenir compte des approches écosystémiques de gestion, le présent rapport comprend également de l’information sur d’autres espèces (p. ex., commerciales, récréatives, importantes sur le plan écologique), les composantes écosystémiques (p. ex., l’habitat côtier) et les zones désignées pour l’aménagement du territoire (p. ex., zones d’importance écologique et biologique) pour chaque zone définie par l’utilisateur. 
 
-#### **ACCENT SUR LES ESPÈCES INSCRITES EN VERTU DE LA <i>LOI SUR LES ESPÈCES EN PÉRIL</i> –ÉVALUATION PAR LE COSEPAC ET/OU ESPÈCES SAUVAGES**  
 
-Définitions pertinentes pour les espèces inscrites en vertu de la Loi sur les espèces en péril (LEP), évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC), ou incluses dans la liste des espèces sauvages :
+Définitions pertinentes pour les espèces inscrites en vertu de la _Loi sur les espèces en péril_ (LEP), évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC), ou incluses dans la liste des _espèces sauvages_ de 2015 :
 
-- **LEP** - TLe texte suivant est tiré du site Web de la LEP (URL ci-dessous). La Loi sur les espèces en péril (LEP) a été proclamée en juin 2003 et fait partie de la stratégie en trois volets qu’applique le gouvernement du Canada pour protéger les espèces sauvages en péril. Cette stratégie en trois volets comporte aussi les engagements pris en vertu de l’Accord pour la protection des espèces en péril et les activités menées dans le cadre du Programme d’intendance de l’habitat pour les espèces en péril. La LEP vise à prévenir la disparition des espèces, des sous-espèces et des populations sauvages distinctes du Canada, à permettre le rétablissement des espèces en voie de disparition ou menacées et à favoriser la gestion d’autres espèces pour éviter qu’elles ne deviennent des espèces en péril. Elle s’applique automatiquement à toutes les terres domaniales au Canada ainsi qu’à toutes les espèces en péril inscrites et à leur habitat essentiel. Pour de plus amples renseignements sur la LEP, veuillez consulter le site <https://www.canada.ca/fr/environnement-changement-climatique/services/registre-public-especes-peril.html> 
+- **LEP** - TLe texte suivant est tiré du site Web de la LEP (URL ci-dessous). La _Loi sur les espèces en péril_ (LEP) a été proclamée en juin 2003 et fait partie de la stratégie en trois volets qu’applique le gouvernement du Canada pour protéger les espèces sauvages en péril. Cette stratégie en trois volets comporte aussi les engagements pris en vertu de l’Accord pour la protection des espèces en péril et les activités menées dans le cadre du Programme d’intendance de l’habitat pour les espèces en péril. La LEP vise à prévenir la disparition des espèces, des sous-espèces et des populations sauvages distinctes du Canada, à permettre le rétablissement des espèces en voie de disparition ou menacées et à favoriser la gestion d’autres espèces pour éviter qu’elles ne deviennent des espèces en péril. Elle s’applique automatiquement à toutes les terres domaniales au Canada ainsi qu’à toutes les espèces en péril inscrites et à leur habitat essentiel. Pour de plus amples renseignements sur la LEP, veuillez consulter le site <https://www.canada.ca/fr/environnement-changement-climatique/services/registre-public-especes-peril.html> 
 
 - **COSEPAC** - Le texte suivant est tiré du site web du COSEPAC (URL ci-dessous) : Le Comité sur la situation des espèces en péril au Canada (COSEPAC) est un comité consultatif indépendant qui agit auprès de la ministre fédérale de l’Environnement et du Changement climatique et qui se réunit deux fois par année pour évaluer la situation des espèces sauvages menacées de disparition. Ses membres, des experts de la biologie des espèces sauvages provenant du milieu universitaire, de la fonction publique, d’organisations non gouvernementales et du secteur privé, sont chargés de désigner les espèces sauvages qui risquent de disparaître du Canada. Le COSEPAC détermine la situation, à l’échelle nationale, des espèces, des sous-espèces, des variétés ou d’autres unités désignables du Canada qui sont considérées en voie de disparition de la planète ou du pays. Le COSEPAC utilise un processus fondé sur les sciences et les connaissances autochtones et communautaires pour évaluer les espèces sauvages en péril. Tous les mammifères, oiseaux, reptiles, amphibiens, poissons, arthropodes, mollusques, plantes vasculaires, mousses et lichens indigènes sont visés par le mandat actuel du COSEPAC. Pour de plus amples renseignements sur le COSEPAC, veuillez consulter le site <https://cosewic.ca/index.php/fr/>
 
 - **Espèces sauvages** - Tous les cinq ans, le Groupe de travail national sur la situation générale (GTNSG), qui comprend des représentants des gouvernements fédéral, provinciaux et territoriaux, publie un rapport général sur la situation des espèces sauvages au Canada. Ces rapports ont pour but d’informer les Canadiens sur la situation des espèces au pays, d’aider à prévenir la disparition d’espèces au Canada en raison de l’activité humaine, et d’identifier les espèces qui devraient être évaluées par le COSEPAC. Pour de plus amples renseignements sur les rapports Espèces sauvages, veuillez consulter le site <https://www.wildspecies.ca/fr>
+
 
 {{add_main_sections}}
 
