--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -127,7 +127,7 @@ Aquatic Species that have been listed under the _Species At Risk Act_ (SARA) or 
 
 The following are definitions relevant for species listed by the _Species at Risk Act_ (SARA) or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Note: COSEWIC species assessed as Special Concern, Threatened, and Endangered may be listed by SARA.
 
-- **SARA** - The following text was obtained from the SARA website (URL below). The Species at Risk Act (SARA) was proclaimed in June 2003; it is one part of a three part Government of Canada strategy for the protection of wildlife Species At Risk. This three part strategy also includes commitments under the Accord for the Protection of Species At Risk and activities under the Habitat Stewardship Program for Species At Risk. The purposes of SARA are to prevent Canadian indigenous species, subspecies, and distinct populations from becoming extirpated or extinct, to provide for the recovery of endangered or threatened species, and encourage the management of other species to prevent them from becoming at risk. It applies to all federal lands in Canada; all wildlife species listed as being at risk; and their critical habitat. For more information on SARA visit <https://www.canada.ca/en/environment-climate-change/services/species-risk-public-registry.html> 
+- **SARA** - The following text was obtained from the SARA website (URL below). The _Species at Risk Act_ (SARA) was proclaimed in June 2003; it is one part of a three part Government of Canada strategy for the protection of wildlife Species At Risk. This three part strategy also includes commitments under the Accord for the Protection of Species At Risk and activities under the Habitat Stewardship Program for Species At Risk. The purposes of SARA are to prevent Canadian indigenous species, subspecies, and distinct populations from becoming extirpated or extinct, to provide for the recovery of endangered or threatened species, and encourage the management of other species to prevent them from becoming at risk. It applies to all federal lands in Canada; all wildlife species listed as being at risk; and their critical habitat. For more information on SARA visit <https://www.canada.ca/en/environment-climate-change/services/species-risk-public-registry.html> 
 
 - **COSEWIC** - The following text was obtained from the COSEWIC website (URL below): The Committee on the Status of Endangered Wildlife in Canada (COSEWIC) is an independent advisory panel to the Minister of Environment and Climate Change Canada that meets twice a year to assess the status of wildlife Species At Risk of extinction. Members are wildlife biology experts from academia, government, non-governmental organizations and the private sector responsible for designating wildlife species in danger of disappearing from Canada. COSEWIC determines the national status of wild Canadian species, subspecies, varieties or other designatable units that are suspected of being at risk of extinction or extirpation. COSEWIC uses a process based on science and Aboriginal or community knowledge to assess wildlife Species At Risk. All native mammals, birds, reptiles, amphibians, fish, arthropods, molluscs, vascular plants, mosses and lichens are included in COSEWIC's current mandate. For more information on COSEWIC visit <https://www.cosewic.ca/index.php/en-ca/>
 
