new data update (OpenData.Rdata 7/26/2021) --

--- a/app/Rmd/report_cetaceans_EN.Rmd
+++ b/app/Rmd/report_cetaceans_EN.Rmd
@@ -185,11 +185,11 @@ Important usage considerations: model predictions in this section should not be 
 
 #### ***Area-specific SDM cetacean search results***
 ```{r sdm, include=FALSE, cache=FALSE}
-fin_whale_sf<-stars::st_as_stars(fin_whale)%>%sf::st_as_sf()
-harbour_porpoise_sf<-stars::st_as_stars(harbour_porpoise)%>%sf::st_as_sf()
-humpback_whale_sf<-stars::st_as_stars(humpback_whale)%>%sf::st_as_sf()
-sei_whale_sf<-stars::st_as_stars(sei_whale)%>%sf::st_as_sf()
-
+# Following line were moved to SaveDataSets_asRdata.R
+# fin_whale_sf<-stars::st_as_stars(fin_whale)%>%sf::st_as_sf()
+# harbour_porpoise_sf<-stars::st_as_stars(harbour_porpoise)%>%sf::st_as_sf()
+# humpback_whale_sf<-stars::st_as_stars(humpback_whale)%>%sf::st_as_sf()
+# sei_whale_sf<-stars::st_as_stars(sei_whale)%>%sf::st_as_sf()
 table_sdm <- sdm_table(fin_whale_sf, harbour_porpoise_sf, humpback_whale_sf, sei_whale_sf, studyArea)
 ```
 ```{r}
