--- a/app/Rmd/intro_FR.Rmd
+++ b/app/Rmd/intro_FR.Rmd
@@ -125,7 +125,7 @@ knitr::kable(table_tier,align="l",
 Les espèces qui ont été inscrites aux termes de la _Loi sur les espèces_ en péril (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC) sont actuellement visées par ce cadre de rapport reproductible. Reconnaissant l’importance de tenir compte des approches écosystémiques de gestion, le présent rapport comprend également de l’information sur d’autres espèces (p. ex., commerciales, récréatives, importantes sur le plan écologique), les composantes écosystémiques (p. ex., l’habitat côtier) et les zones désignées pour l’aménagement du territoire (p. ex., zones d’importance écologique et biologique) pour chaque zone définie par l’utilisateur. 
 
 
-Définitions pertinentes pour les espèces inscrites en vertu de la _Loi sur les espèces en péril_ (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). À noter : Les espèces du COSEPAC jugées préoccupantes, menacées et en voie de disparition peuvent être inscrites sur la liste de la LEP. 
+Définitions pertinentes pour les espèces inscrites en vertu de la _Loi sur les espèces en péril_ (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). À noter : Les espèces du COSEPAC jugées préoccupantes, menacées et en voie de disparition peuvent être inscrites en vertu de la LEP. 
 
 - **LEP** - TLe texte suivant est tiré du site Web de la LEP (URL ci-dessous). La _Loi sur les espèces en péril_ (LEP) a été proclamée en juin 2003 et fait partie de la stratégie en trois volets qu’applique le gouvernement du Canada pour protéger les espèces sauvages en péril. Cette stratégie en trois volets comporte aussi les engagements pris en vertu de l’Accord pour la protection des espèces en péril et les activités menées dans le cadre du Programme d’intendance de l’habitat pour les espèces en péril. La LEP vise à prévenir la disparition des espèces, des sous-espèces et des populations sauvages distinctes du Canada, à permettre le rétablissement des espèces en voie de disparition ou menacées et à favoriser la gestion d’autres espèces pour éviter qu’elles ne deviennent des espèces en péril. Elle s’applique automatiquement à toutes les terres domaniales au Canada ainsi qu’à toutes les espèces en péril inscrites et à leur habitat essentiel. Pour de plus amples renseignements sur la LEP, veuillez consulter le site <https://www.canada.ca/fr/environnement-changement-climatique/services/registre-public-especes-peril.html> 
 
