report_SARA_EN_CS_edits.Rmd
Removed "Link" for open data source to maintain consistency throughout report. 
- Charlotte Smith

--- a/app/Rmd/report_SARA_EN.Rmd
+++ b/app/Rmd/report_SARA_EN.Rmd
@@ -15,7 +15,7 @@ This report is *not* the authoritative advice on Species At Risk data. Please ac
 #### ***DFO Species At Risk distribution (range)*** {-}    
 
 Contact: <info@dfo-mpo.gc.ca>  
-Link:  Last retrieved on: October 1 2020 from Open Data  <https://open.canada.ca/data/en/dataset/e0fabad5-9379-4077-87b9-5705f28c490b>  
+Last retrieved on: October 1 2020 from Open Data  <https://open.canada.ca/data/en/dataset/e0fabad5-9379-4077-87b9-5705f28c490b>  
 Quality Tier: High  
 Security level: none  
 
