--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -31,9 +31,9 @@ knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, fig.align="lef
 ```{r load data and functions, echo=FALSE, include=FALSE, cache=FALSE}
 minYear <- 2010
 load(here::here("app/data/testData.RData"))
-#load(here::here("app/data/OpenData.RData"))
-#load(here::here"app/data/OpenData_sardist.RData"))
-#load(here::here("app/data/SecureData.RData"))
+load(here::here("app/data/OpenData.RData"))
+load(here::here("app/data/OpenData_sardist.RData"))
+load(here::here("app/data/SecureData.RData"))
 #load("\\\\ent.dfo-mpo.ca\\ATLShares\\Science\\BIODataSvc\\SRC\\Reproducible_Reporting\\data\\SecureData.Rdata")
 lapply(list.files(here::here("app/R"), pattern = ".[Rr]$", full.names = TRUE),source) # check helpers.R for a list of packages
 ```
